--- a/all.html
+++ b/all.html
@@ -4,15 +4,15 @@
 <body bgcolor="#00FFFF", text="#888888", link="#088008", alink="#800880", vlink="#999999", leftmargin="10", topmargin="15>
 <center><h1><font face="Edwardian Script ITC", color="#987654", size="25">Hypertext Markup Language</font></h1></center>
 <center><small>Prepared by:-Yuvaksha Singh Rathore</small></center>
-<big>cooding of chapter 1</big>
-<basefont face="Copperplate Gothic" color="#456789" size="10">All cooding is written in the notepad
+<big>coding of chapter 1</big>
+<basefont face="Copperplate Gothic" color="#456789" size="10">All coding is written in the notepad
 <hr color="#789654 noshade>
 <hr align="left" width="30%" size="2">
 <hr align="center" width="30%" size="2">
 <hr align="right" width="30%" size="2">
 <hr color="#987456" size="4">
 <!-it is comment tag->
-<h1><b>comments</b> are used to add remarkb to the programs created in any language</h1>
+<h1><b>comments</b> are used to add remark to the programs created in any language</h1>
 <h2><i>it is not executed by the compilers or browser of the program</i></h2>
 <h3><u>but are displayed in the source programs as they are.</u></h3>
 <h4><s>it is used to strike through the blocked text</s></h4>
@@ -34,15 +34,15 @@
 </ul>
 <center><h1><font face="Edwardian Script ITC", color="#987654", size="25">Hypertext Markup Language</font></h1>
 <small>Prepared by:-Yuvaksha Singh Rathore</small></center>
-<big>cooding of chapter 1</big>
-<basefont face="Copperplate Gothic" color="#456789" size="10">All cooding is written in the notepad
+<big>coding of chapter 1</big>
+<basefont face="Copperplate Gothic" color="#456789" size="10">All coding is written in the notepad
 <hr color="#789654 noshade>
 <hr align="left" width="30%" size="2">
 <hr align="center" width="30%" size="2">
 <hr align="right" width="30%" size="2">
 <hr color="#987456" size="4">
 <!-it is comment tag->
-<h1><b>comments</b> are used to add remarkb to the programs created in any language</h1>
+<h1><b>comments</b> are used to add remark to the programs created in any language</h1>
 <h2><i>it is not executed by the compilers or browser of the program</i></h2>
 <h3><u>but are displayed in the source programs as they are.</u></h3>
 <h4><s>it is used to strike through the blocked text</s></h4>
@@ -1038,3 +1038,4 @@ Line 1
 </body>
 
 </html>
+
